--- a/index.html
+++ b/index.html
@@ -8,26 +8,29 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <h1>Hello World</h1>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem amet soluta sed at velit dolorum totam exercitationem nihil ducimus voluptatum.</p>
+    <div class="tontainer">
 
-    <header>
-        <h2>Cities</h2>
-    </header>
-
-    <section>
-        <nav>
-            <ul>
-                <li><a href="#x">London</a></li>
-                <li><a href="#x">Paris</a></li>
-                <li><a href="#x">Tokyo</a></li>
-            </ul>
-        </nav>
-        <article>
+        <h1 class="title">Hello World</h1>
+        <p class="sub_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem amet soluta sed at velit dolorum totam exercitationem nihil ducimus voluptatum.</p>
+        
+        <header>
+            <h2>Cities</h2>
+        </header>
+        
+        <section>
+            <nav>
+                <ul>
+                    <li><a href="#x">London</a></li>
+                    <li><a href="#x">Paris</a></li>
+                    <li><a href="#x">Tokyo</a></li>
+                </ul>
+            </nav>
+            <article>
             <h2>London</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem non maxime ipsa modi natus iure eligendi numquam itaque laborum, quam quasi architecto animi reprehenderit officiis labore delectus temporibus. Quod sunt hic eius nostrum! Deleniti magni odio illum eligendi libero necessitatibus accusamus quidem hic eos. Dolorem non ipsam voluptate delectus repellat?</p>
         </article>
     </section>
+</div>
 
     <footer>
         <p>copyright 2022</p>
