--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div class="tontainer">
+    <div class="container">
 
         <h1 class="title">Hello World</h1>
         <p class="sub_text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem amet soluta sed at velit dolorum totam exercitationem nihil ducimus voluptatum.</p>
